--- a/style.css
+++ b/style.css
@@ -7,12 +7,8 @@ https://rocketteslim.github.io/Eval-Asterial/
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
-main{
-    justify-items: center;
-}
-
 
 header{
     display: flex;
@@ -25,6 +21,9 @@ header nav{
     margin: auto;
     max-width: 1200px;
     width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
 
 }
 
@@ -56,11 +55,13 @@ article{
 .Head_Banner {
     position: relative; 
     text-align: center; 
+    width: 100%;
 }
 
 .Banner  {
-    width: 1440px; 
+    width: 100%; 
     height: 700px; 
+    object-fit: cover;
 }
 
 .Head_Banner h1 {
@@ -74,6 +75,9 @@ article{
     text-align: center;
     max-width: 1200px;
     width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
 
 }
 
@@ -89,6 +93,11 @@ article{
     max-width: 1200px;
     width: 100%;
     justify-content:space-around;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
 }
 .left_part{
     width: 50%;
@@ -163,6 +172,11 @@ p{
     max-width: 1200px;
     width: 100%;
     flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
 }
 .expertise p{
     margin-bottom: 20px;
@@ -172,19 +186,23 @@ p{
 .inge_aero{
     display: flex;
     flex-direction: row;
-    overflow: hidden;
-
+    align-items: stretch;
+    width: 100%;
+    max-height: 500px;
 }
 .inge_aero img{
-    width: 50%;
     height: auto;
+    width: 50%;
     object-fit: cover;
+    object-position: right;
 }
 .inge_aero .right_part{
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
     width: 50%;
     color: white;
+    justify-content: center;
     background-color: #2e4480;
     padding: 75px 64px 75px 64px;
 }
@@ -218,6 +236,12 @@ h3{
     flex-direction: column;
     max-width: 1200px;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+
 }
 
 .Projects p{
@@ -315,6 +339,9 @@ h3{
     flex-direction: column;
     max-width: 1200px;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .contact form{
     display: flex;
@@ -324,6 +351,8 @@ h3{
     font-family: "Montserrat";
     font-size: 1rem;
     margin-bottom: 96px;
+    padding-left: 2rem;
+    padding-right: 2rem;
 
 }
 .contact form .div_form{
@@ -355,7 +384,10 @@ textarea#message{
 
 .contact form input, textarea#message, .contact form select, .contact form option {
     padding: .5rem 1rem .5rem 1rem;
-    border-radius: .3125rem #ccc;
+    border: 1px solid #8790AB;
+    border-radius: 5px;
+    font-family: "Montserrat";
+
 }
 
 .button_submit{
